Fuel Expenses Changes

--- a/src/app/main/layout/reports/fuel-expense-reports/fuel-expense-reports.component.html
+++ b/src/app/main/layout/reports/fuel-expense-reports/fuel-expense-reports.component.html
@@ -16,6 +16,9 @@
         <li class="nav-item disabled-tab-nav" (click)="changeFuelExpenseTab(2)">
             <a class="nav-link" [ngClass]="{active:tab==2}">Search</a>
         </li>
+        <li class="nav-item disabled-tab-nav" (click)="changeFuelExpenseTab(3)">
+            <a class="nav-link" [ngClass]="{active:tab==3}">Fuel Trial Balance</a>
+        </li>
     </ul>
     <div class="row">
         <div class="col-lg-12 col-md-12" *ngIf="tab === 1">
@@ -454,6 +457,101 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="col-lg-12 col-md-12" *ngIf="tab === 3">
+            <div class="tile">
+                <div class="tile-body">
+                    <div class="row form-group">
+                            <div class="col-sm-12">
+                                <div class="row">
+                                    <div *ngFor="let item of fuelExpenseData">
+                                        <div class="form-check ml-1 mr-1">
+                                            <input class="form-check-input" type="radio" [value]="item.id" [id]="'checkbox_' + item.id"
+                                                   [(ngModel)]="item.checked" [ngModelOptions]="{standalone: true}"
+                                                   style="margin-top: 0.2rem !important;"
+                                                   (ngModelChange)="getSuppplierDataById(item)">
+                                            <label class="form-check-label" [for]="'checkbox_' + item.id">
+                                                {{ item.name }} {{item.toBeCollected}}, {{item.toBePaid}}
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-sm-1 offset-11">
+                            <button type="button" class="btn btn-success btn-sm mr-2" (click)="openAmountpopUp()">Add Payment</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 table-responsive">
+                            <table class="table table-hover dataTable text-center" id="fuelExpenseReports">
+                                <thead>
+                                <tr class="table-bordered">
+                                    <th>S.No</th>
+                                    <th>Date</th>
+                                    <th>Old Balance</th>
+                                    <th>New Balance</th>
+                                    <th>Fuel Charge</th>
+                                    <th>Credit Amount</th>
+                                    <th>Service Details</th>
+                                    <th>Transaction Date</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr *ngFor="let fuelData of supplierDetails; let i = index">
+
+                                    <td>{{i + 1}}</td>
+                                    <td>{{fuelData.dateStr || 'NA'}}</td>
+                                    <td>{{fuelData.oldBalance || 'NA'}}</td>
+                                    <td>{{fuelData.newBalance || 'NA'}}</td>
+                                    <td>{{fuelData.fuelCharge || 'NA'}}</td>
+                                    <td>{{fuelData.creditAmount || 'NA'}}</td>
+                                    <td>{{fuelData.serviceDetails || 'NA'}}</td>
+                                    <td>{{ fuelData.transactionDate ? (fuelData.transactionDate | date: 'yyyy-MM-dd') : 'NA' }}</td>
+                                </tr>
+                                <tr *ngIf="supplierDetailsCount === 0 || !supplierDetailsCount">
+                                    <td colspan="12">No FuelExpenses</td>
+                                </tr>
+                                </tbody>
+                                <tfoot>
+                                <tr *ngIf="supplierDetailsCount != 0 || supplierDetailsCount">
+                                    <th colspan="12">
+                                        <div class="pull-right">
+                                            Total Count : {{supplierDetailsCount || 0}}
+                                        </div>
+                                    </th>
+                                </tr>
+                                </tfoot>
+                            </table>
+
+                            <div class="form-group">
+                                <div class="list-row">
+                                    <ngb-pagination *ngIf="supplierDetailsCount|| supplierDetailsCount != 0"
+                                                    [(page)]="fuelTrailbalanceQuery.page"
+                                                    [pageSize]="fuelTrailbalanceQuery.size"
+                                                    [collectionSize]="supplierDetailsCount"
+                                                    [boundaryLinks]="true"
+                                                    (pageChange)="changeSearchPage($event)"
+                                                    [maxSize]="5">
+                                    </ngb-pagination>
+                                    <ul class="pagination pull-right" style="margin-top: -37px !important;"
+                                        *ngIf="supplierDetailsCount || supplierDetailsCount !== 0">
+                                        <li class="page-item" [ngClass]="size == fuelTrailbalanceQuery.size ? 'active' : ''"
+                                            *ngFor="let size of fuelTrailbalanceQuery.pageSizes" (click)="handleSearchPageSizeChange(size)">
+                                            <button class="page-link"> {{ size }}
+                                                <span class="sr-only">(current)</span>
+                                            </button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="report_left_inner"  style="display: none;">
@@ -485,3 +583,50 @@
         </div>
     </div>
 </div>
+<ng-template #myModal let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <div class="" style="width: 100%;">
+            <div class="row">
+                <div class="col-sm-4 mt-auto mb-auto">
+                    <h5 class="modal-title form-head-line-style" style="color: #45a3c5"></h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-sm-6 form-group">
+                <label class="control-label">Supplier Name</label>
+                    <ng-select
+                            [items]="suppliers"
+                            [multiple]="false"
+                            bindLabel="name"
+                            [closeOnSelect]="true"
+                            bindValue="id"
+                            placeholder="Service Station"
+                            [(ngModel)]="supplierId"
+                            [ngModelOptions]="{standalone: true}">
+                    </ng-select>
+                </div>
+            <div class="col-sm-6 form-group">
+                    <label>Amount: </label>
+                    <input type="number" class="form-control-sm form-control"
+                           [(ngModel)]="amount" [ngModelOptions]="{standalone: true}"
+                           placeholder="Enter Amount" />
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <div class="col-12 text-center">
+<!--            <p class="error-field">{{errorMessage}}</p>-->
+        </div>
+        <div class="col-sm-12 text-right p-0">
+            <button type="button" class="btn btn-success btn-sm mr-2" (click)="updatePostDieselPayment()">
+                <i class="fa fa-fw fa-check-circle"></i>Save
+            </button>
+            <button type="button" class="btn btn-danger btn-sm" (click)="closeModal()">
+                <i class="fa fa-fw fa-times-circle"></i> Close
+            </button>
+        </div>
+    </div>
+</ng-template>
