Service Report Changes

--- a/src/app/main/layout/reports/fuel-expense-reports/fuel-expense-reports.component.html
+++ b/src/app/main/layout/reports/fuel-expense-reports/fuel-expense-reports.component.html
@@ -617,6 +617,26 @@
                        [(ngModel)]="comment"
                        placeholder="Enter comment" />
             </div>
+            <div class="col-sm-6">
+                <label class="control-label">Transaction Date</label>
+                <div class="input-group">
+                    <input name="startDate" class="form-control form-control-sm"
+                           [(ngModel)]="transactionDate"
+                           placeholder="Enter Date"
+                           readonly type="text"
+                           #date3="bsDatepicker"
+                           [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD', containerClass: 'theme-red', showTodayButton: true, todayPosition: 'center', isAnimated: true }"
+                           bsDatepicker/>
+                    <div class="input-group-append">
+                        <button class="btn btn-light btn-sm" type="button"
+                                style="border: 1px solid #ced4da;"
+                                (click)="date3.show()"
+                                [attr.aria-expanded]="date3.isOpen">
+                            <i class="fa fa-calendar"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
