--- a/src/app/main/layout/reports/shared/service-report/service-report.component.html
+++ b/src/app/main/layout/reports/shared/service-report/service-report.component.html
@@ -188,7 +188,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr *ngFor="let booking of serviceReportDetails.bookings"
+                                    <tr *ngFor="let booking of serviceReportDetails.bookings; let i = index"
                                         [ngClass]="{changedRate: rateToBeVerified(booking)}">
                                         <td>
                                             <span *ngIf="booking.id != null" title="{{booking.seats}}">
@@ -220,6 +220,20 @@
                                                          [(ngModel)]="booking.bookedBy">
                                                 </ng-select>
                                             </span>
+                                            <div style="width: 100px" *ngIf="isCashBooking(booking)">
+                                                <ng-select
+                                                        [(ngModel)]="booking.userId"
+                                                        [ngModelOptions]="{standalone: true}"
+                                                        bindValue="id"
+                                                        bindLabel="name"
+                                                        placeholder="Enter User Name"
+                                                        [clearable]="false"
+                                                        (ngModelChange)="assignCollectionStaffFun(booking, i)">
+                                                    <ng-option value="">Select User</ng-option>
+                                                    <ng-option *ngFor="let us of users"
+                                                               [value]="us.id">{{us.fullName}}</ng-option>
+                                                </ng-select>
+                                            </div>
                                         </td>
                                         <td>
                                             <span *ngIf="booking.id != null" title="{{booking.name}}">
