--- a/src/app/main/layout/master/operator-accounts/add-edit-operator-accounts/add-edit-operator-accounts.component.html
+++ b/src/app/main/layout/master/operator-accounts/add-edit-operator-accounts/add-edit-operator-accounts.component.html
@@ -76,7 +76,14 @@
                                 <label class="form-check-label" for="sendInvoiceEmail">Send Invoice Emails</label>
                             </div>
                         </div>
-
+                        <div class="col-sm-6 col-12 form-group">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="useCollectionStaff"
+                                       [(ngModel)]="operatorAccount.useCollectionStaff"
+                                       [ngModelOptions]="{standalone: true}">
+                                <label class="form-check-label" for="sendInvoiceEmail">Use Collection Staff</label>
+                            </div>
+                        </div>
                         <div class="col-sm-6 col-12 form-group">
                             <label>Online Booking Type:<span class="mandatory-field">*</span></label>
                             <input type="text" class="form-control form-control-sm"
