--- a/src/app/main/layout/reports/service-reports/service-reports.component.html
+++ b/src/app/main/layout/reports/service-reports/service-reports.component.html
@@ -14,9 +14,16 @@
 <!--            <li class="breadcrumb-item"><span class="breadcrumb-item-router">Service Reports</span></li>-->
         </ul>
     </div>
-
+    <ul class="nav nav-tabs">
+        <li class="nav-item pending-users-tab" (click)="showServiceReports(1)">
+            <a class="nav-link" [ngClass]="{active:tab==1}">Service Reports</a>
+        </li>
+        <li class="nav-item disabled-tab-nav" (click)="showServiceReports(2)">
+            <a class="nav-link" [ngClass]="{active:tab==2}">Submmition Summary</a>
+        </li>
+    </ul>
     <div class="row">
-        <div class="col-lg-12 col-md-12">
+        <div class="col-lg-12 col-md-12" *ngIf="tab === 1">
             <div class="tile">
                 <div class="tile-body">
                     <div class="row form-group">
@@ -66,7 +73,7 @@
                             <div>Submitted: {{submitted}}</div>
                             <div>Verified: {{verified}}</div>
                             <div>Total: {{allReports.length}}</div>
-                            <div>TotalCashIncome: {{totalCashIncome}}</div>
+                            <div>TotalCashIncome: {{totalNetIncome.toFixed(2)}}</div>
                             <div>TotalNetIncome: {{totalNetIncome.toFixed(2)}}</div>
                         </div>
                     </div>
@@ -108,6 +115,86 @@
                                     <td><span *ngIf="service.conductor">{{service.conductor.name}} - {{service.conductor.contactNumber}}</span></td>
                                     <td>{{ service.netCashIncome | number }}</td>
                                     <td>{{ service.netIncome | number}}</td>
+                                    <td>{{ service.status || '--'}}</td>
+                                    <td>{{service.attrs.submittedBy || '--'}}</td>
+                                </tr>
+                                <tr *ngIf="!allReports || allReports.length === 0">
+                                    <td colspan="14">No reports exist. </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12" *ngIf="tab === 2">
+            <div class="tile">
+                <div class="tile-body">
+                    <div class="row form-group">
+                        <div class="col-sm-3">
+                            <div class="input-group">
+                                <div class="input-group-append">
+                                    <button class="btn btn-sm btn-default" (click)="previousDate()">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </button>
+                                </div>
+                                <input class="form-control form-control-sm"
+                                       placeholder=""
+                                       name="permit"
+                                       [maxDate]="newDate"
+                                       [(ngModel)]="currentDate"
+                                       [ngModelOptions]="{standalone: true}"
+                                       (ngModelChange)="getDate(currentDate)"
+                                       bsDatepicker
+                                       #dt="bsDatepicker"
+                                       [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD', isAnimated: true}">
+                                <div class="input-group-append">
+                                    <button class="btn btn-light btn-sm" style="border: 1px solid #ced4da;"
+                                            (click)="dt.show()"
+                                            [attr.aria-expanded]="dt.isOpen" type="button">
+                                        <i class="fa fa-calendar"></i>
+                                    </button>
+                                </div>
+                                <div class="input-group-append">
+                                    <button class="btn btn-sm btn-default" (click)="nextDate()">
+                                        <i class="fa fa-arrow-right"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 table-responsive">
+                            <table class="table table-bordered table-hover text-center" id="serviceReports">
+                                <thead>
+                                <tr>
+                                    <th>S No</th>
+                                    <th>Service#</th>
+                                    <th>Type</th>
+                                    <th scope="col" [appFrentendSort]="allReports"
+                                        data-order="desc" data-name="source">From - To<i class="fa fa-sort"></i></th>
+                                    <th>Vehicle</th>
+                                    <th>CashIncome</th>
+                                    <th>Discount</th>
+                                    <th>Final Collection</th>
+                                    <th scope="col" [appFrentendSort]="allReports"
+                                        data-order="desc" data-name="status">Status<i class="fa fa-sort"></i></th>
+                                    <th>SubmittedBy</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr *ngFor="let service of allReports; let i =index;">
+                                    <td>{{i + 1}}</td>
+                                    <td><a class="cus-a" (click)="goToServiceReport(service)">{{ service.serviceNumber }}</a></td>
+                                    <td><a class="cus-a" (click)="goToServiceReport(service)">{{ service.busType }}</a></td>
+                                    <td>{{ service.source }} - {{ service.destination }}</td>
+                                    <td><a class="cus-a" (click)="goToServiceReport(service)">{{ service.vehicleRegNumber }}</a></td>
+                                    <td>{{ service.initialCashIncome | number }}</td>
+                                    <td><span *ngIf="service.status">{{ service.initialCashIncome - service.netCashIncome | number}} </span> </td>
+                                    <td><span *ngIf="service.status">{{service.netCashIncome}}</span></td>
                                     <td>{{ service.status || '--'}}</td>
                                     <td>{{service.attrs.submittedBy || '--'}}</td>
                                 </tr>
