--- a/src/app/main/layout/reports/service-reports/service-reports.component.html
+++ b/src/app/main/layout/reports/service-reports/service-reports.component.html
@@ -21,6 +21,9 @@
         <li class="nav-item disabled-tab-nav" (click)="showServiceReports(2)">
             <a class="nav-link" [ngClass]="{active:tab==2}">Submmition Summary</a>
         </li>
+        <li class="nav-item disabled-tab-nav" (click)="showServiceReports(3)">
+            <a class="nav-link" [ngClass]="{active:tab==3}">Collection Summary</a>
+        </li>
     </ul>
     <div class="row">
         <div class="col-lg-12 col-md-12" *ngIf="tab === 1">
@@ -194,6 +197,89 @@
                                     <td><span *ngIf="service.status === 'SUBMITTED'">{{service.netCashIncome | number}}</span></td>
                                     <td>{{ service.status || '--'}}</td>
                                     <td>{{service.submittedBy || '--'}}</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="3"></td>
+                                    <td><a class="cus-a" (click)="showSubmisionSummary(SubmisionSummaryTable)"> CashIncome :{{totalSubmittedCash | number}}</a></td>
+                                    <td>Discount: {{totalDiscount | number}}</td>
+                                    <td>Due: {{totalDue | number}}</td>
+                                    <td>Cash:{{totalCashCollected | number}}</td>
+                                    <td colspan="2"></td>
+                                </tr>
+                                <tr *ngIf="!allReports || allReports.length === 0">
+                                    <td colspan="14">No reports exist. </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12" *ngIf="tab === 3">
+            <div class="tile">
+                <div class="tile-body">
+                    <div class="row form-group">
+                        <div class="col-sm-3">
+                            <div class="input-group">
+                                <div class="input-group-append">
+                                    <button class="btn btn-sm btn-default" (click)="previousDate()">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </button>
+                                </div>
+                                <input class="form-control form-control-sm"
+                                       placeholder=""
+                                       name="permit"
+                                       [maxDate]="newDate"
+                                       [(ngModel)]="currentDate"
+                                       [ngModelOptions]="{standalone: true}"
+                                       (ngModelChange)="getDate(currentDate)"
+                                       bsDatepicker
+                                       #dt="bsDatepicker"
+                                       [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD', isAnimated: true}">
+                                <div class="input-group-append">
+                                    <button class="btn btn-light btn-sm" style="border: 1px solid #ced4da;"
+                                            (click)="dt.show()"
+                                            [attr.aria-expanded]="dt.isOpen" type="button">
+                                        <i class="fa fa-calendar"></i>
+                                    </button>
+                                </div>
+                                <div class="input-group-append">
+                                    <button class="btn btn-sm btn-default" (click)="nextDate()">
+                                        <i class="fa fa-arrow-right"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 table-responsive">
+                            <table class="table table-bordered table-hover text-center" id="serviceReports">
+                                <thead>
+                                <tr>
+                                    <th>S No</th>
+                                    <th>Service#</th>
+                                    <th>Redbus</th>
+                                    <th>PayTM</th>
+                                    <th>Abhibus</th>
+                                    <th>Online</th>
+                                    <th>Cash</th>
+                                    <th>Net Income</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr *ngFor="let service of allReports; let i =index;">
+                                    <td>{{i + 1}}</td>
+                                    <td><a class="cus-a" (click)="goToServiceReport(service)">{{ service.serviceNumber }} - {{ service.busType }} - {{ service.source }} - {{ service.destination }}</a></td>
+                                    <td>{{service.netRedbusIncome | number : '.2-2'}}</td>
+                                    <td>{{service.netPaytmIncome | number : '.2-2'}}</td>
+                                    <td>{{service.netAbhibusIncome | number : '.2-2'}}</td>
+                                    <td>{{service.netOnlineIncome | number : '.2-2'}}</td>
+                                    <td>{{service.netCashIncome | number : '.2-2'}}</td>
+                                    <td><b>{{service.netIncome | number : '.2-2'}}</b></td>
+
                                 </tr>
                                 <tr>
                                     <td colspan="3"></td>
